[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/stage/ST5.png" type="Texture" id=1]
[ext_resource path="res://assets/stage/ST.png" type="Texture" id=2]
[ext_resource path="res://scene/DFA/DFA5.gd" type="Script" id=3]

[node name="DFA5" type="Node2D"]
script = ExtResource( 3 )

[node name="St5" type="Sprite" parent="."]
position = Vector2( 483, 293 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="trap" type="Sprite" parent="."]
position = Vector2( 492, 29 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St2_1" type="Sprite" parent="."]
position = Vector2( 351, 143 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St3_2_key" type="Sprite" parent="."]
position = Vector2( 429, 145 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St6_3_key" type="Sprite" parent="."]
position = Vector2( 506, 146 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St5_6_key" type="Sprite" parent="."]
position = Vector2( 588, 144 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St4_5_key" type="Sprite" parent="."]
position = Vector2( 679, 30 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St7_5_key" type="Sprite" parent="."]
position = Vector2( 679, 144 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="init" type="Sprite" parent="."]
position = Vector2( 72.9999, 268 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )
offset = Vector2( 111.429, 80.5714 )

[node name="St1" type="Sprite" parent="."]
position = Vector2( 223, 313 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St5_2" type="Sprite" parent="."]
position = Vector2( 374, 252 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St4_5" type="Sprite" parent="."]
position = Vector2( 481, 221 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="FakeFN" type="Sprite" parent="."]
position = Vector2( 564, 220 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St6_5_2" type="Sprite" parent="."]
position = Vector2( 479, 287 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="trap2" type="Sprite" parent="."]
position = Vector2( 667, 255 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St3_6_2" type="Sprite" parent="."]
position = Vector2( 569, 290 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St4_1" type="Sprite" parent="."]
position = Vector2( 346, 465 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St7_5" type="Sprite" parent="."]
position = Vector2( 517, 397 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="FakseFN" type="Sprite" parent="."]
position = Vector2( 602, 397 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St5_4" type="Sprite" parent="."]
position = Vector2( 427, 466 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St2_5" type="Sprite" parent="."]
position = Vector2( 519, 465 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St3_2" type="Sprite" parent="."]
position = Vector2( 601, 467 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St6_3" type="Sprite" parent="."]
position = Vector2( 688, 465 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="trap3" type="Sprite" parent="."]
position = Vector2( 345, 567 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="FakeFN2" type="Sprite" parent="."]
position = Vector2( 426, 568 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St6_5_4" type="Sprite" parent="."]
position = Vector2( 516, 568 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St3_6_4" type="Sprite" parent="."]
position = Vector2( 602, 566 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="St2_3" type="Sprite" parent="."]
position = Vector2( 682, 568 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="trap4" type="Sprite" parent="."]
position = Vector2( 786, 510 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )

[node name="FN" type="Sprite" parent="."]
position = Vector2( 845, 207 )
scale = Vector2( 0.583333, 0.583333 )
texture = ExtResource( 2 )
